--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Google Font Raleway-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Mental Maths</title>
 </head>
 <body>
+    <h1 class="heading"><img src="assets/images/x2.png" alt="logo"> Mental Maths: Squaring</h1>
 
     <script src="assets/js/script.js"></script>
 </body>
