Add main structure in index.html and add style to practice area

--- a/index.html
+++ b/index.html
@@ -14,6 +14,84 @@
 <body>
     <h1 class="heading"><img src="assets/images/x2.png" alt="logo"> Mental Maths: Squaring</h1>
 
+    <div id="practice-area"></div>
+        <h2>Example: Calculate&ensp;23<sup>2</sup>,&ensp;17<sup>2</sup>,&ensp;and&ensp;23 x 17</h2>
+        <ol>
+            <li><p>Divide the two numbers in two pieces each: 23 = 20 + 3 and 17 = 20 - 3</p></li>
+            <li>
+                <p>Use the so-called binomial squared identities:                
+                    <div id="square-sum">
+                        <span>23<sup>2</sup></span>
+                        <span> = </span>
+                        <input class="input-box" type="text" value="20&sup2";>
+                        <span> + </span>
+                        <input class="input-box" type="text" value="2x20x3">
+                        <span> + </span>
+                        <input class="input-box" type="text" value="3&sup2">
+                        <span> = </span>
+                        <input class="input-box" type="text">
+                    </div>
+
+                    <div id="square-conjugate">
+                        <span>23</span><span> x </span><span>17</span>
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                        <span> - </span>
+                        <input class="input-box" type="number">
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                    </div>
+
+                    <div id="square-diff">
+                        <span>17<sup>2</sup></span>
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                        <span> - </span>
+                        <input class="input-box" type="number">
+                        <span> + </span>
+                        <input class="input-box" type="number">
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                    </div>
+                    <div id="square-sum">
+                        <span>&emsp;&nbsp;</span>
+                        <span> = </span>
+                        <input class="input-box" type="text" value="400";>
+                        <span> + </span>
+                        <input class="input-box" type="text" value="120">
+                        <span> + </span>
+                        <input class="input-box" type="text" value="9">
+                        <span> = </span>
+                        <input class="input-box" type="text" value="529">
+                    </div>
+
+                    <div id="square-conjugate">
+                        <span>&emsp;&emsp;&emsp;</span>
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                        <span> - </span>
+                        <input class="input-box" type="number">
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                    </div>
+
+                    <div id="square-diff">
+                        <span>&emsp;&nbsp;</span>
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                        <span> - </span>
+                        <input class="input-box" type="number">
+                        <span> + </span>
+                        <input class="input-box" type="number">
+                        <span> = </span>
+                        <input class="input-box" type="number">
+                    </div>
+                </p>
+            </li>
+        </ol>
+
+    <div id="game-area"></div>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
