Modify text of user number input in practice area

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     <section id="practice-area">
         <h2>Practice Area</h2>
         <div>
-            <label for="enter-number">Enter a Number (11- 99): </label>
-            <input class="input-box" id="user-number" type="number" min="11" max="99">
+            <label for="enter-number">Enter a Number (preferably between 11 and 105) and press ENTER: </label>
+            <input class="input-box" id="user-number" type="number" min="11" max="105">
         </div>
         <div class="square-sum">
             <div class="equation">
