--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
         <div>
             <button id="start-game">Start Game</button>
         </div>
-        <div class="calculate-square equation">
-            <b><span class="first-number">0</span>
-            <span id="exponent"><sup></sup></span>
+        <div class="equation" id="question">
+            <b><span id="first-number">0</span>
+            <span ><sup id="exponent"></sup></span>
             <span id="multiply-sign"> x </span>
-            <span class="second-number">0</span>
+            <span id="second-number">0</span>
             <span> = </span>
             </b>
             <input class="input-box" id="answer-box" type="number">
