--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
     <section id="practice-area">
         <h2>Practice Area</h2>
-        <div>
-            <label for="enter-number">Enter a Number (preferably between 11 and 105) and press ENTER: </label>
-            <input class="input-box" id="user-number" type="number" min="11" max="105">
+        <div id="input-user-number">
+            <label for="user-number">Enter a Number and Press ENTER: </label>
+            <input class="input-box" id="user-number" type="number" min="11" max="105">                
         </div>
         <div class="square-sum">
             <div class="equation">
@@ -204,7 +204,7 @@
 
     <section id="challenge-area">
         <h2>Challenge Area</h2>
-        <div>
+        <div id="button-start-game">
             <button id="start-game">Start Game</button>
         </div>
         <div class="equation" id="question">
@@ -214,7 +214,7 @@
             <span id="second-number">0</span>
             <span> = </span>
             </b>
-            <input class="input-box" id="answer-box" type="number">
+            <input class="input-box" id="answer-box" type="number" required>
         </div>
     </section>
 
