Add JavaScript functions that increment scores

--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
         </div>
     </section>
 
+        <div id="score-area">
+            <span>Correct Answers: </span><span id="correct">0</span><span> of </span><span id="total">0</span>
+        </div>
+    
+
+    
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
