Complete responsiveness. Improve overall layout

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <title>Mental Maths</title>
 </head>
 <body>
-    <h1 class="heading"><img src="assets/images/x2.png" alt="logo"> Mental Maths: Squaring</h1>
+    <h1 class="heading">Mental Maths: Squaring<img id="logo" src="assets/images/x2.png" alt="logo"></h1>
 
     <section id="theory">
         <h2>Example: Calculate&ensp;23<sup>2</sup>,&ensp;17<sup>2</sup>,&ensp;and&ensp;23 x 17</h2>
         <ol>
-            <li><p>Divide the two numbers in two pieces each: 23 = 20 + 3 and 17 = 20 - 3</p></li>
+            <li><p>Divide the two numbers in two pieces each:&ensp;<span id="display-numbers">23 = 20 + 3&ensp;and&ensp;17 = 20 - 3</span></p></li>
             <li><p>Use the so-called binomial squared identities:</p></li>
         </ol>
                                 
         <div class="square-sum">
-            <div class="equation">
+            <div class="equation" id="first-equation">
                 <b>
                     <span>23</span>
                     <span><sup>2</sup></span>
