Correct the only W3C error: replace & with &amp;

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
             <div class="equation">
                 <span>= </span>
-                <input class="input-box" type="text" value="20&sup2" readonly>
+                <input class="input-box" type="text" value="20&amp;sup2" readonly>
                 <span> + </span>
                 <input class="input-box" type="text" value="2x20x3" readonly>
                 <span> + </span>
-                <input class="input-box" type="text" value="3&sup2" readonly>
+                <input class="input-box" type="text" value="3&amp;sup2" readonly>
             </div>
 
             <div class="equation">
@@ -66,9 +66,9 @@
 
             <div class="equation">
                 <span>= </span>
-                <input class="input-box" type="text" value="20&sup2" readonly>
+                <input class="input-box" type="text" value="20&amp;sup2" readonly>
                 <span> - </span>
-                <input class="input-box" type="text" value="3&sup2" readonly>
+                <input class="input-box" type="text" value="3&amp;sup2" readonly>
             </div>
         
             <div class="equation">
@@ -94,11 +94,11 @@
 
             <div class="equation">
                 <span>= </span>
-                <input class="input-box" type="text" value="20&sup2" readonly>
+                <input class="input-box" type="text" value="20&amp;sup2" readonly>
                 <span> - </span>
                 <input class="input-box" type="text" value="2x20x3" readonly>
                 <span> + </span>
-                <input class="input-box" type="text" value="3&sup2" readonly>
+                <input class="input-box" type="text" value="3&amp;sup2" readonly>
             </div>
 
             <div class="equation">
