Write comments in style.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="heading">Mental Maths: Squaring<img id="logo" src="assets/images/x2.png" alt="logo"></h1>
 
     <!--Examples of calculating squares-->
-    <section id="theory">
+    <section id="theory-area">
         <h2>Example: Calculate&ensp;23<sup>2</sup>,&ensp;17<sup>2</sup>,&ensp;and&ensp;23 x 17</h2>
         <ol>
             <li>
